--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
-    "node.js": "^0.0.1-security",
-    "vercel": "^31.0.4"
+    "node.js": "^0.0.1-security"
   },
   "scripts": {
     "start": "node server.js"
