--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "https": "^1.0.0",
-    "node.js": "^0.0.1-security"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2"
   },
   "scripts": {
     "start": "node server.js"
