--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0"
+    "express": "^4.17.2"
   },
   "scripts": {
     "start": "node server.js"
