--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "description": "newsapiapp",
   "main": "server.js",
   "author": "karan raj",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
